NetBSD Problem Report #43582

From www@NetBSD.org  Thu Jul  8 13:23:01 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 42C6163BAB2
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  8 Jul 2010 13:23:01 +0000 (UTC)
Message-Id: <20100708132300.F3A1363BA9C@www.NetBSD.org>
Date: Thu,  8 Jul 2010 13:23:00 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: tests/fs/vfs/t_rmdirrace:lfs_race fails in a number of ways
X-Send-Pr-Version: www-1.0

>Number:         43582
>Category:       kern
>Synopsis:       tests/fs/vfs/t_rmdirrace:lfs_race fails in a number of ways
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jul 08 13:25:00 +0000 2010
>Closed-Date:    Tue Sep 08 04:55:40 +0000 2015
>Last-Modified:  Tue Sep 08 04:55:40 +0000 2015
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
panic: lfs: ifile ino 92 read 22
or
panic: lfs_rescount
or
panic: lfs_rescountdirop
or
panic: SET_ENDOP: rmdir: no dirops but  nadirop=-1

or success ;)
>How-To-Repeat:
run test
>Fix:

>Release-Note:

>Audit-Trail:
From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43582 CVS commit: src/tests/fs/vfs
Date: Wed, 14 Jul 2010 21:44:40 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Wed Jul 14 21:44:40 UTC 2010

 Modified Files:
 	src/tests/fs/vfs: t_renamerace.c

 Log Message:
 xfail test on lfs.  It goes badaboom faster than you can find your
 multipass.  Borrow PR kern/43582 used earlier for rmdirrace, as it
 looks pretty much like the same problem.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/tests/fs/vfs/t_renamerace.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Konrad Schroder" <perseant@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43582 CVS commit: src
Date: Thu, 16 Feb 2012 02:47:56 +0000

 Module Name:	src
 Committed By:	perseant
 Date:		Thu Feb 16 02:47:56 UTC 2012

 Modified Files:
 	src/sbin/newfs_lfs: make_lfs.c
 	src/sys/ufs/lfs: lfs.h lfs_alloc.c lfs_bio.c lfs_segment.c lfs_vfsops.c
 	    lfs_vnops.c
 	src/tests/fs/vfs: t_renamerace.c t_rmdirrace.c

 Log Message:
 Pass t_renamerace and t_rmdirrace tests.

 Adapt dholland@'s fix to ufs_rename to fix PR kern/43582.  Address several
 other MP locking issues discovered during the course of investigating the
 same problem.

 Removed extraneous vn_lock() calls on the Ifile, since the Ifile writes
 are controlled by the segment lock.

 Fix PR kern/45982 by deemphasizing the estimate of how much metadata
 will fill the empty space on disk when the disk is nearly empty
 (t_renamerace crates a lot of inode blocks on a tiny empty disk).


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/sbin/newfs_lfs/make_lfs.c
 cvs rdiff -u -r1.135 -r1.136 src/sys/ufs/lfs/lfs.h
 cvs rdiff -u -r1.111 -r1.112 src/sys/ufs/lfs/lfs_alloc.c
 cvs rdiff -u -r1.121 -r1.122 src/sys/ufs/lfs/lfs_bio.c
 cvs rdiff -u -r1.223 -r1.224 src/sys/ufs/lfs/lfs_segment.c
 cvs rdiff -u -r1.293 -r1.294 src/sys/ufs/lfs/lfs_vfsops.c
 cvs rdiff -u -r1.239 -r1.240 src/sys/ufs/lfs/lfs_vnops.c
 cvs rdiff -u -r1.24 -r1.25 src/tests/fs/vfs/t_renamerace.c
 cvs rdiff -u -r1.8 -r1.9 src/tests/fs/vfs/t_rmdirrace.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43582 CVS commit: [netbsd-6] src
Date: Sat, 17 Mar 2012 17:40:08 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sat Mar 17 17:40:08 UTC 2012

 Modified Files:
 	src/sbin/newfs_lfs [netbsd-6]: make_lfs.c
 	src/sys/ufs/lfs [netbsd-6]: lfs.h lfs_alloc.c lfs_bio.c lfs_segment.c
 	    lfs_vfsops.c lfs_vnops.c
 	src/tests/fs/vfs [netbsd-6]: t_renamerace.c t_rmdirrace.c

 Log Message:
 Pull up following revision(s) (requested by perseant in ticket #116):
 	sys/ufs/lfs/lfs_alloc.c: revision 1.112
 	tests/fs/vfs/t_rmdirrace.c: revision 1.9
 	tests/fs/vfs/t_renamerace.c: revision 1.25
 	sys/ufs/lfs/lfs_vnops.c: revision 1.240
 	sys/ufs/lfs/lfs_segment.c: revision 1.224
 	sys/ufs/lfs/lfs_bio.c: revision 1.122
 	sys/ufs/lfs/lfs_vfsops.c: revision 1.294
 	sbin/newfs_lfs/make_lfs.c: revision 1.19
 	sys/ufs/lfs/lfs.h: revision 1.136
 Pass t_renamerace and t_rmdirrace tests.
 Adapt dholland@'s fix to ufs_rename to fix PR kern/43582.  Address several
 other MP locking issues discovered during the course of investigating the
 same problem.
 Removed extraneous vn_lock() calls on the Ifile, since the Ifile writes
 are controlled by the segment lock.
 Fix PR kern/45982 by deemphasizing the estimate of how much metadata
 will fill the empty space on disk when the disk is nearly empty
 (t_renamerace crates a lot of inode blocks on a tiny empty disk).


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.18.2.1 src/sbin/newfs_lfs/make_lfs.c
 cvs rdiff -u -r1.135 -r1.135.2.1 src/sys/ufs/lfs/lfs.h
 cvs rdiff -u -r1.111 -r1.111.8.1 src/sys/ufs/lfs/lfs_alloc.c
 cvs rdiff -u -r1.121 -r1.121.2.1 src/sys/ufs/lfs/lfs_bio.c
 cvs rdiff -u -r1.223 -r1.223.2.1 src/sys/ufs/lfs/lfs_segment.c
 cvs rdiff -u -r1.293 -r1.293.2.1 src/sys/ufs/lfs/lfs_vfsops.c
 cvs rdiff -u -r1.239 -r1.239.2.1 src/sys/ufs/lfs/lfs_vnops.c
 cvs rdiff -u -r1.24 -r1.24.4.1 src/tests/fs/vfs/t_renamerace.c
 cvs rdiff -u -r1.8 -r1.8.4.1 src/tests/fs/vfs/t_rmdirrace.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 08 Sep 2015 04:55:40 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.